# dataiter

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  COPYING  Makefile  NEWS.md  README.md  RELEASING.md  benchmark-versions.sh  benchmark.py  dataiter.py  prof.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
data/: README.md  downloads.csv  downloads.json  holidays.csv  holidays.json  listings-reviews.csv  listings-reviews.json  listings.csv  listings.py  neighbourhoods.geojson  neighbourhoods.py
dataiter/: __init__.py  aggregate.py  array.py  data_frame.py  data_frame_column.py  deco.py  dt.py  dtypes.py  geojson.py  io.py  list_of_dicts.py  regex.py  util.py  vector.py
dataiter/test/: __init__.py  test___init__.py  test_aggregate.py  test_array.py  test_data_frame.py  test_data_frame_column.py  test_dt.py  test_geojson.py  test_io.py  test_list_of_dicts.py  test_regex.py  test_util.py  test_vector.py
doc/: Makefile  aggregation.rst  api.rst  check.py  comparison.rst  conf.py  data-frame-column.rst  data-frame.rst  dataiter.rst  dt.rst  dtypes.rst  geojson.rst  index.rst  list-of-dicts.rst  output.py  quick-start-data-frame.rst  quick-start-list-of-dicts.rst  quick-start.rst  regex.rst  requirements.txt  vector.rst
doc/comparison/: README.md  build.py  generate.sh  index.html  prism.css
doc/vs/: Makefile  build.py  (+3 more)
test/: test_dataiter.csv  test_dataiter.json  test_dataiter.py
tools/: check-missing.py  release
validation/: generate-df.py  generate-ld.py  generate.R  generate.py  validate-df.sh  validate-ld.sh  validate.sh
(+67 files in other folders)
